# CC-Metrics

./: .pre-commit-config.yaml  README.md  prepare_caching.py  pyproject.toml
.github/workflows/: pre-commit.yml
CCMetrics/: CC_base.py  __init__.py  space_separation.py
paper_asset/: Comparison_to_HD.ipynb  Comparison_to_LesionDice.ipynb  Comparison_to_PQ.ipynb  Comparison_to_SDice.ipynb
tests/: test_metrics.py
