[build-system]
requires = ["setuptools >= 65.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CCMetrics"
version = "0.0.1"
authors = [
    {name = "Alexander Jaus", email = "alexander.jaus@kit.edu"},
]
description = "An evaluation protocol for standard metrics per connected component"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["medical segmentation", "tumor segmentation", "instance segmentation", "detection via segmentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "torch",
    "monai",
    "numpy",
    "scipy",
    "connected-components-3d",
    "nibabel",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/alexanderjaus/CC-Metrics"
Issues = "https://github.com/alexanderjaus/CC-Metrics/issues"

[tool.setuptools.packages.find]
include = ["CCMetrics"]
